# SERGAK

./: .gitignore  Dockerfile  README.md  SERGAK_TUSHUNCHA.md  generate_deck.py  index.html  main.py  netlify.toml  push_to_git.bat  push_to_git.ps1  render.yaml  requirements.txt  script.js  style.css
.github/workflows/: build.yml
ai_ximoyachi/: README.md  pubspec.yaml  setup_icon.ps1
ai_ximoyachi/android/: build.gradle.kts
ai_ximoyachi/android/app/: build.gradle.kts
ai_ximoyachi/ios/Runner/: Info.plist
ai_ximoyachi/ios/Runner.xcodeproj/: project.pbxproj
ai_ximoyachi/lib/: main.dart
ai_ximoyachi/linux/: CMakeLists.txt
ai_ximoyachi/linux/runner/: my_application.cc
ai_ximoyachi/macos/Runner.xcodeproj/: project.pbxproj
ai_ximoyachi/test/: widget_test.dart
ai_ximoyachi/windows/: CMakeLists.txt
ai_ximoyachi/windows/runner/: Runner.rc  main.cpp
sergak web bot/: .dockerignore  .gitignore  README.md  copy_logo.py  fix_git.bat  index.html  privacy.html  push_this.bat  requirements.txt  script.js  style.css  terms.html  translations.js  version.json  windows.css  windows.html  windows.js
sergak web bot/sergak_bot/: bot.py  get_bot_info.py  requirements.txt  security.py
sergak_bot/: bot.py  requirements.txt  security.py
sergak_tauri/: index.html  mobile_client.html  package-lock.json  package.json
sergak_tauri/src/: App.css  App.jsx
sergak_tauri/src-tauri/: 2  Cargo.toml  tauri.conf.json
sergak_tauri/src-tauri/icons/: icon.icns
sergak_tauri/src-tauri/src/: ai.rs  db.rs  fs_monitor.rs  hash_db.rs  lib.rs  main.rs  phone_link.rs  process_monitor.rs  quarantine.rs
sergak_tauri/src/components/: AiAssistant.jsx  Dashboard.jsx  (+9 more)
(+32 files in other folders)
