[package]
name = "sergak_tauri"
version = "0.1.0"
description = "SERGAK PC - Kiber Qalqon"
authors = ["TAFU"]
edition = "2021"

[lib]
name = "sergak_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.21"
sysinfo = "0.30"
chrono = "0.4"
rsa = { version = "0.9", features = ["sha2"] }

